[project]
name = "karbon-interview"
version = "0.1.0"
description = "Karbon AI Engineer interview - prewired runtime environment for all coding scenarios"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- P0 core API (scenario 0) ---
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "ollama>=0.6.2",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "pybreaker>=1.4.1",
    "structlog>=26.1.0",
    "uuid6>=2025.0.1",
    # --- P1 security / guardrails ---
    "llm-guard==0.3.16",          # pins transformers==4.51.3; do NOT upgrade
    "spacy>=3.8.14",
    # --- Agents (scenarios 4-7) ---
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.2",      # OpenRouter fallback (ChatOpenAI base_url)
    "langchain-community>=0.3",   # BM25Retriever, misc loaders
    "langgraph>=1.2.5",
    # --- RAG (scenario 8) ---
    "sentence-transformers>=5.6.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "ragas>=0.2",
    # --- Data pipelines (scenarios 1-3) ---
    "pandas>=2",
    "pandera>=0.20",
    "scikit-learn>=1.9.0",
    # --- Structured extraction (scenario 10) ---
    "gliner>=0.2",
    # --- Eval (scenario 9) ---
    "deepeval>=4.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
# Reuse the global uv cache populated by the sibling `karbon AI` project.
